added donald's and jonathan's work

--- a/wow/wow.css
+++ b/wow/wow.css
@@ -28,6 +28,34 @@ nav{
      font-weight:bold;
 	font-family: 'Maven Pro', sans-serif;
 }
+#flexBorders {
+  display: flex;
+  justify-content: space-evenly;
+  max-height: 200px;
+  align-items: center;
+}
+
+.borders {
+  margin-bottom: 10px;
+}
+
+.img2 {
+  margin-top: 40px;
+  max-height: 100px;
+  max-width: 100px;
+  margin-right: 40px;
+}
+
+button {
+  margin-top: 100px;
+  max-width: 100px;
+  max-height: 30px;
+  border-radius: 50px;
+}
+
+.item {
+  margin-top: 30px;
+}
 
 /*home css*/
 .home-nav{
@@ -298,6 +326,7 @@ td{
     padding: 20px 500px 0px;
     color:steelblue;
 }
+
 /* sign in css */
 #signIn {
     text-align: left;
